--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="{% if page.ogimage %}{{ page.ogimage | absolute_url }}{% else %}{{ '/assets/img/background/og_preview.jpg' | absolute_url }}{% endif %}" />
     <meta property="og:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
     <meta property="og:description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
-    <link rel="stylesheet" href="{{ "/assets/css/help.min.css" | absolute_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/highlight.css" | absolute_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/cookie-eu-banner.css" | absolute_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/custom.css" | absolute_url }}">
