--- a/_includes/cards/section-cards.html
+++ b/_includes/cards/section-cards.html
@@ -17,7 +17,7 @@
 	        {% if subitem.version contains 'pro' %}
 	        	<div class="ribbon"><span>PRO</span></div>
 	        {% endif %}
-		        <span class="tile-teaser"><i class="fa {{ subitem.icon }} fa-fw"></i></span>
+		        <span class="tile-teaser"><span class="fa fa-icon {{ subitem.icon }} fa-fw"></span></span>
 		        <span class="tile-title">{{ subitem.title }}</span>
 		        <span class="tile-description">{{ subitem.teaser }}</span>
             </a>
