--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,20 +14,25 @@ layout: table_wrappers
     {% include components/header.html %}  
     <div class="main-content-wrap">
       {% include components/breadcrumbs.html %}
-      <div id="main-content" class="main-content">
-        <main>
+	  <div id="main-content" class="main-content">
+		<main>
+     	  {% if page.has_children == "true" and page.has_toc == "true" %}
+            {% include components/children_nav.html %}
+          {% endif %}
+
+		  {% if page.has_children != true and page.has_toc != false %}
+		  	{% include components/page_toc.html %}
+		  {% endif %}
+  
           {% if site.heading_anchors != false %}
             {% include vendor/anchor_headings.html html=content beforeHeading="true" anchorBody="<svg viewBox=\"0 0 16 16\" aria-hidden=\"true\"><use xlink:href=\"#svg-link\"></use></svg>" anchorClass="anchor-heading" anchorAttrs="aria-labelledby=\"%html_id%\"" %}
           {% else %}
-            {{ content }}
+		  {{ content }}
           {% endif %}
 
-          {% if page.has_children == true and page.has_toc != false %}
-            {% include components/children_nav.html %}
-          {% endif %}
         </main>
         {% include components/footer.html %}
-      </div>
+	  </div>
     </div>
     {% if site.search_enabled != false %}
       {% include components/search_footer.html %}
