--- a/_includes/components/page_toc.html
+++ b/_includes/components/page_toc.html
@@ -1,14 +1,5 @@
----
----
-# {{page.title}}
-{: .no_toc }
-
-## Table of contents
-{: .no_toc .text-delta }
-
-1. TOC
-{:toc}
-
----
-
-<h1>MMMMMMMMPPPAAAA</h1>
+<nav>
+  <h4>Table of Contents</h4>
+  * this unordered seed list will be replaced by toc as unordered list
+  {:toc}
+</nav>
