--- a/_includes/components/page_toc.html
+++ b/_includes/components/page_toc.html
@@ -1,5 +1,8 @@
 <nav>
   <h4>Table of Contents:</h4>
-  * this unordered seed list will be replaced by toc as unordered list
+ 
+  {: .no_toc .text-delta }
+
+  1. TOC
   {:toc}
 </nav>
