--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,1 +1,16 @@
 // custom SCSS (or CSS) goes here
+.blue {
+	color: blue;
+  }
+
+.red {
+	color: red;
+  }
+
+.green {
+	color: green;
+  }
+
+.grey {
+	color: grey;
+  }
