--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -23,7 +23,7 @@
 	height: 150px;
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 	transition: all 1s ease-in-out;
-	background: #6b64f3;
+	background: #8f64f3b6;
 	border-radius: 15px;
 	margin-top: 25px;
 }
