--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,98 +1,1 @@
-// custom SCSS (or CSS) goes here
-.blue {
-	color: blue;
-  }
-
-.red {
-	color: red;
-  }
-
-.green {
-	color: green;
-  }
-
-.grey {
-	color: grey;
-  }
-
-
-
-.card {
-	float: left;
-	padding: 5px;
-	height: 150px;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-	transition: all 1s ease-in-out;
-	background: #8f64f3b6;
-	border-radius: 15px;
-	margin-top: 25px;
-}
-
-.card-image {
-	height: 50%;
-	width:auto;
-	border-radius: 12px;
-}
-
-.card span {
-	font-weight: 600;
-	color: white;
-	text-align: center;
-	display: block;
-	padding-top: 10px;
-	font-size: 16px;
-}
-
-.card .info {
-	font-weight: 400;
-	color: white;
-	display: block;
-	text-align: center;
-	padding-top: 3px;
-	font-size: 12px;
-}
-
-.card .img {
-	width: 70px;
-	height: 80px;
-	background: #6b64f3;
-	border-radius: 15px;
-	margin: auto;
-	margin-top: 25px;
-}
-
-.cards {
-	max-width: 1200px;
-	display: grid;
-	gap: 1rem;
-	margin: 0 -5px;
-  }
-
-.cards:after {
-	content: "";
-	display: grid;
-	clear: left;
-  }
- 
-
-@media (min-width: 100Px) and (max-width: 480px) {
-	.cards { grid-template-columns: repeat(2, 1fr); 
-	display: grid;
-	margin-bottom: 20px;
-	}
-  }
-
-
-  @media(min-width: 481Px) and (max-width: 1024px) {
-	.cards { grid-template-columns: repeat(3, 1fr); 
-	display: grid;
-	margin-bottom: 20px;
-	}
-  }
-
-  @media (min-width: 1025px) {
-	.cards { grid-template-columns: repeat(5, 1fr); 
-	display: grid;
-	margin-bottom: 20px;
-	}
-  }
+@import '_card';
