--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -28,6 +28,7 @@ background-color: #fff;
   width: 100%;
   height: 18rem;
   object-fit: cover;
+  background-color: #8f64f3b6;
 }
 
 .card-image0 {
