--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -23,7 +23,7 @@ background-color: #fff;
 }
 
 
-.card-imgage {
+.card .img {
   display: block;
   width: 100%;
   height: 18rem;
@@ -55,7 +55,7 @@ background-color: #fff;
 	font-size: 12px;
 }
 
-.card .img {
+.card .img0 {
 	width: 70px;
 	height: 80px;
 	background: #6b64f3;
