--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -1,4 +1,79 @@
+
+.cards {
+  z-index: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .card {
+  margin: 30px auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 40px;
+box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.card img {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
+  object-fit: cover;
+}
+
+.card .title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: -80px;
+  height: 40px;
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+    -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
+
+.title-white {
+  color: white;
+}
+
+.title-black {
+  color: black;
+}
+
+@media all and (max-width: 500px) {
+  .card-list {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
+}
+
+
+/*
+.card {
+  margin: 30px auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 40px;
+  background-image: url('https://i.redd.it/b3esnz5ra34y.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-repeat: no-repeat;
+box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  transition: 0.4s;
+}
+*/
+
+Resources
+.cardZ {
   border-radius: 0.2rem;
   overflow: hidden;
   box-shadow: 5px 5px 5px red;
@@ -13,7 +88,7 @@
 }
 
 
-.card img {
+.cardZ img {
   display: block;
   width: 80%;
   height: 130px;
@@ -24,7 +99,7 @@
 }
 
 
-.card span {
+.cardZ span {
 	font-weight: 600;
 	color: blue;
 	text-align: center;
@@ -33,7 +108,7 @@
 	font-size: 16px;
 }
 
-.card .info {
+.cardZ .info {
 	font-weight: 400;
 	color: white;
 	display: block;
@@ -41,14 +116,14 @@
 	padding-top: 3px;
 	font-size: 12px;
 }
-.cards {
+.cardsE {
 	max-width: 1200px;
 	display: grid;
 	gap: 1rem;
 	margin: 0 -5px;
   }
 
-.cards:after {
+.cardsZ:after {
 	content: "";
 	display: grid;
 	clear: left;
