--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -6,7 +6,7 @@
 }
 
 .card {
-  margin: 30px auto;
+  margin: 1rem auto;
   height: 130px;
   border-radius: 40px;
 box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
@@ -17,7 +17,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 .card img {
   width: inherit;
   height: inherit;
-  border-radius: 40px;
+  border-radius: 0.5rem;
   object-fit: cover;
 }
 
@@ -43,13 +43,6 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 .title-black {
   color: black;
-}
-
-@media all and (max-width: 500px) {
-  .card-list {
-    /* On small screens, we are no longer using row direction but column */
-    flex-direction: column;
-  }
 }
 
 
