--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -8,7 +8,7 @@
 .card {
   margin: 1rem auto;
   height: 130px;
-  border-radius: 40px;
+  border-radius: 0.5rem;
 box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
