--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -18,7 +18,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 .card img {
   width: inherit;
-  height: inherit;
+  height: 130px;
   border-radius: 0.5rem;
   object-fit: cover;
 }
