--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -32,7 +32,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   height: 40px;
 }
 
-.card:hover {
+.cardZ:hover {
   transform: scale(0.9, 0.9);
   box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
     -5px -5px 30px 15px rgba(0,0,0,0.22);
@@ -51,15 +51,6 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   box-shadow: 5px 5px 5px blue;
 }
 
-
-.cardZ span {
-	font-weight: 600;
-	color: blue;
-	text-align: center;
-	display: block;
-	padding-top: 10px;
-	font-size: 16px;
-}
 
 .cards:after {
 	content: "";
