--- a/_sass/custom/_card.scss
+++ b/_sass/custom/_card.scss
@@ -11,8 +11,7 @@
   margin: 1rem auto;
   height: 130px;
   border-radius: 0.5rem;
-#box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  box-shadow: 5px 5px 5px rgba(0,0,0,0.25);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   cursor: pointer;
   transition: 0.4s;
 }
@@ -33,11 +32,6 @@
   height: 40px;
 }
 
-.cardZ:hover {
-  transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
-}
 
 .title-white {
   color: white;
@@ -47,6 +41,7 @@
   color: black;
 }
 
+  
 .card:hover {
   transform: translateY(-0.5%);
   box-shadow: 5px 5px 5px blue;
