--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -12,7 +12,7 @@
     width: $nav-width-md;
     height: 100%;
     border-right: $border $border-color;
-    align-items: flex-end;
+    align-items: flex-start;
   }
 
   @include mq(lg) {
